--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,17 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.14"
+package-mode = false
+
 dependencies = [
     "fastapi[standard-no-fastapi-cloud-cli] (>=0.128.8,<0.129.0)"
 ]
 
 [dependency-groups]
 dev = [
-    "pyright (>=1.1.408,<2.0.0)"
+    "pyright (>=1.1.408,<2.0.0)",
+    "black (>=26.1.0,<27.0.0)",
+    "isort (>=7.0.0,<8.0.0)"
 ]
 
 
