switched to venv due to torch issues with poetry

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # model weights
 skin_cancer_classifer_inceptionv3.onnx
+skin_cancer_classifer_inceptionv3.pt
+
+bin/
+lib64
+pyvenv.cfg
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
