--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,19 +7,32 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.14"
-package-mode = false
-
 dependencies = [
-    "fastapi[standard-no-fastapi-cloud-cli] (>=0.128.8,<0.129.0)"
+    "fastapi[standard-no-fastapi-cloud-cli] (>=0.128.8,<0.129.0)",
+    "pillow (>=12.1.1,<13.0.0)",
+    "torch (==2.10.0+cpu)",
+    "torchvision"
 ]
 
 [dependency-groups]
 dev = [
     "pyright (>=1.1.408,<2.0.0)",
     "black (>=26.1.0,<27.0.0)",
-    "isort (>=7.0.0,<8.0.0)"
+    "isort (>=7.0.0,<8.0.0)",
+    "pytest (>=9.0.2,<10.0.0)"
 ]
 
+[tool.poetry]
+package-mode = false
+
+[tool.poetry.dependencies]
+torch = { source = "pytorch-cpu"}
+torchvision = {source = "pytorch-cpu"}
+
+[[tool.poetry.source]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+priority = "explicit"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
