feat: added tests for all endpoints: livez (formerly healthz), readyz, predict)

--- a/k8s/api/deployment.yaml
+++ b/k8s/api/deployment.yaml
@@ -47,7 +47,7 @@ spec:
               memory: 2Gi
           livenessProbe:
             httpGet:
-              path: /_status/healthz
+              path: /_status/livez
               port: 8000
             initialDelaySeconds: 20
             timeoutSeconds: 5
