--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,5 @@
-pyright (>=1.1.408,<2.0.0)
 black (>=26.1.0,<27.0.0)
 isort (>=7.0.0,<8.0.0)
+pyright (>=1.1.408,<2.0.0)
+httpx (>=0.28.1,<1.0.0)
 pytest (>=9.0.2,<10.0.0)
